--- a/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
+++ b/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\mashTicket.TicketManagement.Domain\mashTicket.TicketManagement.Domain.csproj" />
   </ItemGroup>
 
