09/26/2023 Adding Queries Folder

--- a/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
+++ b/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\mashTicket.TicketManagement.Domain\mashTicket.TicketManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Events\Commands\CreateEvent\" />
+  </ItemGroup>
+
 </Project>
