09/26/2023 Organized code using Queries

--- a/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
+++ b/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
@@ -17,7 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Categories\Commands\" />
     <Folder Include="Features\Events\Commands\CreateEvent\" />
+    <Folder Include="Features\Orders\" />
   </ItemGroup>
 
 </Project>
