--- a/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
+++ b/mashTicket.TicketManagement.Application/mashTicket.TicketManagement.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,7 +18,6 @@
 
   <ItemGroup>
     <Folder Include="Features\Categories\Commands\" />
-    <Folder Include="Features\Events\Commands\CreateEvent\" />
     <Folder Include="Features\Orders\" />
   </ItemGroup>
 
